restructure backend to add quest categories
