# Backend/Controllers/gameController/playerController.js
@@ -1,25 +1,41 @@
 const Player = require("../../models/player");
 const Tool = require("../../models/tool");
 const ToolType = require("../../models/toolType");
-
+const Market = require('../../models/market')
+const Enemy = require('../../models/enemy')
+const Inventory = require('../../models/inventory')
+const QuestStat = require('../../models/questStat');
+const EnemyType = require("../../models/enemyType");
+const Item = require('../../models/item')
+const Quest = require('../../models/quest');
+const { Model } = require("sequelize");
 const getAllData = async (req, res, next) => {
+
   try {
     const player_id = req.token.id;
 
     const data = await Player.findOne({
       where: { player_id: player_id },
       attributes: { exclude: ["player_id", "password", "email"] },
-      include: [
-        {
-          model: Tool,
-          attributes: { exclude: ["player_id", "tool_type_id"] },
-          include: {
-            model: ToolType,
-            attributes: { exclude: ["tool_type_id"] },
-          },
-        },
-      ],
+      include:[
+        { model: ToolType, through: { attributes: [] } },
+        { model: Item, through: { attributes: ['amount'] } },
+        { model: Market, attributes: { exclude: ['player_id'] } },
+        { 
+        model: QuestStat,
+        attributes: { exclude: [ 'player_id', 'quest_id' ] },
+        include:
+        [ 
+          {
+            model: Quest,
+            attributes: { exclude: [ 'player_id', 'quest_id', 'enemy_type' ] },
+            include: [ EnemyType, Item ]
+          }
+        ]
+      }
+      ]
     });
+
     res.status(200).json({ data: data });
   } catch (error) {
     next(error);
@@ -28,13 +44,14 @@ const getAllData = async (req, res, next) => {
 
 const getInventory = async (req, res, next) => {
   try {
-    const player_id = req.token.id;
+    const items = {}
+    let data = await Player.findByPk(req.token.id)
+    data = await data.getItems({joinTableAttributes: ['amount'] })
+ for (const item of data) {
+  items[item.name]=item.Inventory.amount
+ }
 
-    const data = await Player.findByPk(player_id, {
-      attributes: ["stone", "wood", "coal", "iron", "wheat", "fish"],
-      raw: true,
-    });
-    res.status(200).json({ data: data });
+    res.status(200).json({ data: items });
   } catch (error) {
     next(error);
   }
@@ -48,12 +65,6 @@ const putPlayer = async (req, res, next) => {
     const HP = req.body.HP;
     const money = req.body.money;
     const world_name = req.body.world_name;
-    const stone = req.body.stone;
-    const wood = req.body.wood;
-    const coal = req.body.coal;
-    const iron = req.body.iron;
-    const wheat = req.body.wheat;
-    const fish = req.body.fish;
     const objX = req.body.objX;
     const objY = req.body.objY;
     const blockX = req.body.blockX;
@@ -64,12 +75,6 @@ const putPlayer = async (req, res, next) => {
         HP: HP,
         money: money,
         world_name: world_name,
-        stone: stone,
-        wood: wood,
-        coal: coal,
-        iron: iron,
-        wheat: wheat,
-        fish: fish,
         objX: objX,
         objY: objY,
         blockX: blockX,
@@ -81,6 +86,15 @@ const putPlayer = async (req, res, next) => {
         },
       }
     );
+    Object.keys(req.body).forEach(async(key)=>{
+      await Inventory.update({
+  amount:req.body[key]
+      },{
+        where:{player_id:player_id,item:key}
+      }
+      )
+    })
+    
 
     res.status(200).json({ data: { message: "Sikeres módosítás!" } });
   } catch (error) {
