# Backend/routes/gameRoutes/questRoutes.js
@@ -1,11 +1,11 @@
 const { getQuests, postQuest, putQuest, deleteQuest } = require('../../Controllers/gameController/questController');
 const { userAuth } = require('../../middlewares/auth');
-
+const {ProcessQuery} = require('../../middlewares/query')
 const questRouter = require('express').Router({ mergeParams: true });
 
 questRouter.use(userAuth)
 
-questRouter.get('/', getQuests);
+questRouter.get('/', ProcessQuery, getQuests);
 
 questRouter.post('/', postQuest);
 
